--- a/docs/めも.md
+++ b/docs/めも.md
@@ -12,6 +12,7 @@
 
 - Qdrant  はベクトルデータと、そのメタデータを合わせて保存することができる。
   - クエリはベクトルデータを使うこともできるが、メタデータを使うこともできて便利。
+  - [こちら](https://qdrant.tech/documentation/overview/#high-level-overview-of-qdrants-architecture)がQdrant のアーキテクチャを理解するのにわかりやすい
 
 ### pydantic
 
